// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFundEscrowHeader should render header correctly for funding in mempool 1`] = `
<Header
  icons={
    [
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="transaction pending"
/>
`;

exports[`useFundEscrowHeader should render header correctly for unfunded offers 1`] = `
<Header
  icons={
    [
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [MockFunction],
      },
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="fund escrow"
/>
`;

exports[`useFundEscrowHeader should show regtest icons 1`] = `
<Header
  icons={
    [
      {
        "color": "#F5CE22",
        "id": "cpu",
        "onPress": [Function],
      },
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [MockFunction],
      },
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="fund escrow"
/>
`;
